gcc/testsuite/rust/rustc/ui/issues/issue-45296.rs
fn main() {
    let unused = ();

    #![allow(unused_variables)] // { dg-error "" "" { target *-*-* } }
}

